@startuml
'Direccion of the diagram'
left to right direction
'Used style'
skinparam backgroundColor #F5E6CC
'Classes'
skinparam classBackgroundColor #A7C7E7
skinparam classBorderColor #000000
skinparam shadowing true
skinparam roundcorner 15
'Titles'
skinparam classFontColor #000000
skinparam classFontStyle bold
'Relationships'
skinparam classArrowColor #4CAF50
skinparam classArrowThickness 2
skinparam classArrowFontColor black
skinparam classArrowFontSize 11
skinparam nodesep 50
skinparam ranksep 5




' Entities'
class User{
    id
    name
    username
    email
    password
    phone
    address
    profilePicture
    birthdate
    country

}

class Cart{
    id_cart
    total_products
    total_price
    CartItem
}

class CartItem{
    id_item_cart
    quantity
}

class Product{
    id_product
    name
    product_description
    price
    discountedPrice
    pictureProduct
    CartItem
}

class ProductCategory{
    id_category
    name
    description
}


'Relationships'
Cart "1" -- "1" User : has >
Cart "1" - "N" CartItem : has >
CartItem "N" - "1" Product : contains >
Product "N" -- "N" ProductCategory : relates >





@enduml
